fixed an issue where the cart button spilled out of the containing div

--- a/public/style.css
+++ b/public/style.css
@@ -891,13 +891,13 @@ body {
     font-size: 10px;
   }
 
+  .addcart{
+    padding: 10px 25px;
+  }
+
   .caut{
     width: 100%;
   }
-
- /*  .addcart{
-    scale: 0.6;
-  } */
 
 }
 
